# fastapi_tech

./: constants.py  main.py  pyproject.toml  schemas.py
